Removed debug info

--- a/src/pages/cambio-password.html
+++ b/src/pages/cambio-password.html
@@ -96,9 +96,8 @@ $( document ).ready(function() {
         "code": $("#code").val(),
         "password": $("#password").val()
     };
-    console.debug("Login Data", formData);
     $.ajax({
-      url: 'https://172.28.104.131:3000/users/change', // url where to submit the request
+      url: 'https://registro.ingegneri.vr.it:3000/users/change', // url where to submit the request
       type : "POST", // type of action POST || GET
       dataType : 'json', // data type
       data : formData, // post data || get data
