--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -85,15 +85,13 @@ $( document ).ready(function() {
         "email": $("#email").val(),
         "password": $("#password").val()
     };
-    console.debug("Login Data", formData);
     $.ajax({
-      url: 'https://localhost:3000/login', // url where to submit the request
+      url: 'https://registro.ingegneri.vr.it:3000/login', // url where to submit the request
       type : "POST", // type of action POST || GET
       dataType : 'json', // data type
       data : formData, // post data || get data
       success : function(result) {
         let auth_bearer = result.token; 
-        console.debug("Token:",auth_bearer)
         localStorage.setItem('token', auth_bearer)
         window.location.href = "/ricerca.html";
       },
