--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,11 +65,10 @@ $( document ).ready(function() {if(typeof localStorage.getItem('token') !== 'und
   $("#logout").click(function() {
     let token = localStorage.getItem('token')
     $.ajax({
-      url: 'https://localhost:3000/logout', // url where to submit the request
+      url: 'https://registro.ingegneri.vr.it:3000/logout', // url where to submit the request
       type : "POST", // type of action POST || GET
       headers: {"Authorization": "Bearer "+token},
       success: function(result) {
-        console.log(result),
         window.location.href = "/login.html";
       },
       error: function(xhr, resp, text) {
